syntax = "proto3";

option csharp_namespace = "CartingServiceWEBAPI";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message GetCartRequest {
  string cartName = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message GetCartReply {
  string message = 1;
}
